--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,10 @@
 cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
 project(PPSsimulation)
+set(PPS_MODULES sw detectors)
 
 #----------------------------------------------------------------------------
 # Find Geant4 package, activating all available UI and Vis drivers by default
-# You can set WITH_GEANT4_UIVIS to OFF via the command line or ccmake/cmake-gui
-# to build a batch mode only executable
-#
+#----------------------------------------------------------------------------
 
 option(WITH_GEANT4_UIVIS "Build example with Geant4 UI and Vis drivers" ON)
 if(WITH_GEANT4_UIVIS)
@@ -16,38 +15,35 @@ endif()
 
 #----------------------------------------------------------------------------
 # Setup Geant4 include directories and compile definitions
-# Setup include directory for this project
-#
+#----------------------------------------------------------------------------
 
 include(${Geant4_USE_FILE})
 
 #----------------------------------------------------------------------------
 # ROOT include
-#
+#----------------------------------------------------------------------------
+
 set(GCC_COMPILE_FLAGS "-Wno-shadow -fPIC")
 add_definitions(${GCC_COMPILE_FLAGS})
 find_package(ROOT REQUIRED)
 include_directories(${ROOT_INCLUDE_DIR})
 link_directories(${ROOT_LIBRARY_DIR})
 
-
-include_directories(${PROJECT_SOURCE_DIR}/sw/include)
-include_directories(${PROJECT_SOURCE_DIR}/detectors/include)
-add_subdirectory(sw)
-add_subdirectory(detectors)
+foreach(_module ${PPS_MODULES})
+  include_directories(${PROJECT_SOURCE_DIR}/${_module}/include)
+  add_subdirectory(${_module})
+endforeach()
 
 #----------------------------------------------------------------------------
 # Add the executable, and link it to the Geant4 libraries
-#
+#----------------------------------------------------------------------------
 
 add_executable(PPSsim main.cc $<TARGET_OBJECTS:detectors> $<TARGET_OBJECTS:sw>)
 target_link_libraries(PPSsim ${Geant4_LIBRARIES} ${ROOT_LIBRARIES})
 
 #----------------------------------------------------------------------------
-# Copy all scripts to the build directory, i.e. the directory in which we
-# build B1. This is so that we can run the executable directly because it
-# relies on these scripts being in the current working directory.
-#
+# Copy all scripts to the build directory
+#----------------------------------------------------------------------------
 
 set(PPS_MACROS
   init.mac
@@ -60,20 +56,32 @@ foreach(_script ${PPS_MACROS})
     ${PROJECT_SOURCE_DIR}/test/${_script}
     ${PROJECT_BINARY_DIR}/test/${_script}
     COPYONLY
-  )
+)
 endforeach()
 configure_file(${PROJECT_SOURCE_DIR}/test/rootlogon.C ${PROJECT_BINARY_DIR}/rootlogon.C COPYONLY)
-
-#----------------------------------------------------------------------------
-# For internal Geant4 use - but has no effect if you build this
-# example standalone
-#
-
 add_custom_target(ppsSim DEPENDS PPSsim)
 
 #----------------------------------------------------------------------------
 # Install the executable to 'bin' directory under CMAKE_INSTALL_PREFIX
-#
+#----------------------------------------------------------------------------
 
 install(TARGETS PPSsim DESTINATION bin)
 
+#----------------------------------------------------------------------------
+# Generate the Doxygen documentation
+#----------------------------------------------------------------------------
+
+set(DOC_SOURCE "${PROJECT_SOURCE_DIR}/sw/include ${PROJECT_SOURCE_DIR}/detectors/include")
+set(DOC_PROJECT_ROOT ${DOC_SOURCE} CACHE PATH "Root of the project sources")
+set(DOC_DIR ${PROJECT_SOURCE_DIR}/doc)
+execute_process(COMMAND git -C ${PROJECT_SOURCE_DIR} describe --always OUTPUT_VARIABLE DOC_PROJECT_VERSION ERROR_QUIET)
+find_package(Doxygen REQUIRED) # Doxygen
+set(DOC_GENERATE_PDF "YES")
+## Generate the Doxyfile from template
+configure_file(${DOC_DIR}/Doxyfile.in ${DOC_DIR}/Doxyfile @ONLY)
+add_custom_target(doc COMMAND ${DOXYGEN_EXECUTABLE} ${DOC_DIR}/Doxyfile
+  DEPENDS ${DOC_DIR}/Doxyfile.in ${DOC_DIR}/Doxyfile
+  COMMENT "Generating documentation"
+  SOURCES ${DOC_DIR}/Doxyfile
+)
+set_source_files_properties(${DOC_DIR}/Doxyfile PROPERTIES GENERATED 1)
