First version with the GeometryConstructor object (as well as its messenger). Empty geometry from now...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
 project(PPSsimulation)
-set(PPS_MODULES sw detectors)
+set(PPS_MODULES sw detectors beampockets)
 
 #----------------------------------------------------------------------------
 # Find Geant4 package, activating all available UI and Vis drivers by default
