Added a messenger to parametrize the detectors/other stuff to put in the beam... still nothing to appear there though, but working on it

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,14 +38,15 @@ endforeach()
 # Add the executable, and link it to the Geant4 libraries
 #----------------------------------------------------------------------------
 
-add_executable(PPSsim main.cc $<TARGET_OBJECTS:detectors> $<TARGET_OBJECTS:sw>)
-target_link_libraries(PPSsim ${Geant4_LIBRARIES} ${ROOT_LIBRARIES})
+add_executable(ppsSim main.cc $<TARGET_OBJECTS:detectors> $<TARGET_OBJECTS:sw>)
+target_link_libraries(ppsSim ${Geant4_LIBRARIES} ${ROOT_LIBRARIES})
 
 #----------------------------------------------------------------------------
 # Copy all scripts to the build directory
 #----------------------------------------------------------------------------
 
 set(PPS_MACROS
+  init_geometry.mac
   init.mac
   init_vis.mac vis.mac viswrl.mac
   run1.mac run2.mac
@@ -59,13 +60,13 @@ foreach(_script ${PPS_MACROS})
 )
 endforeach()
 configure_file(${PROJECT_SOURCE_DIR}/test/rootlogon.C ${PROJECT_BINARY_DIR}/rootlogon.C COPYONLY)
-add_custom_target(ppsSim DEPENDS PPSsim)
+add_custom_target(PPSSimul DEPENDS ppsSim)
 
 #----------------------------------------------------------------------------
 # Install the executable to 'bin' directory under CMAKE_INSTALL_PREFIX
 #----------------------------------------------------------------------------
 
-install(TARGETS PPSsim DESTINATION bin)
+install(TARGETS ppsSim DESTINATION bin)
 
 #----------------------------------------------------------------------------
 # Generate the Doxygen documentation
