--- a/detectors/CMakeLists.txt
+++ b/detectors/CMakeLists.txt
@@ -13,8 +13,8 @@ file(GLOB headers include/*.hh)
 file(GLOB dict_headers include/*.h)
 file(GLOB dict_sources src/*.cpp)
 list(REMOVE_ITEM dict_headers include/LinkDef.h)
-message(STATUS "Headers for dictionary : " ${dict_headers})
-message(STATUS "Sources for dictionary : " ${dict_sources})
+# message(STATUS "Headers for dictionary : " ${dict_headers})
+# message(STATUS "Sources for dictionary : " ${dict_sources})
 ROOT_GENERATE_DICTIONARY(QuartLDict ${dict_headers} LINKDEF include/LinkDef.h)
 list(APPEND sources QuartLDict.cxx)
 add_library(QuartL SHARED ${dict_sources} QuartLDict.cxx)
