Simplified QuartLEvent construction using the photon hit class ; renamed the detectors/ ROOT dictionary

--- a/detectors/CMakeLists.txt
+++ b/detectors/CMakeLists.txt
@@ -17,10 +17,10 @@ file(GLOB dict_sources src/*.cpp)
 
 # message(STATUS "Headers for dictionary : " ${dict_headers})
 # message(STATUS "Sources for dictionary : " ${dict_sources})
-ROOT_GENERATE_DICTIONARY(QuartLDict ${dict_headers} LINKDEF include/LinkDef.h)
-list(APPEND sources QuartLDict.cxx)
-add_library(QuartL SHARED ${dict_sources} QuartLDict.cxx)
-target_link_libraries(QuartL ${ROOT_LIBRARIES} ${ROOT_COMPONENT_LIBRARIES})
+ROOT_GENERATE_DICTIONARY(DetectorsDict ${dict_headers} LINKDEF include/LinkDef.h)
+list(APPEND sources DetectorsDict.cxx)
+add_library(Detectors SHARED ${dict_sources} DetectorsDict.cxx)
+target_link_libraries(Detectors ${ROOT_LIBRARIES} ${ROOT_COMPONENT_LIBRARIES})
 #install(TARGETS PPS DESTINATION lib)
 
 list(APPEND headers ${dict_headers})
