Started to fill the events reader object to be used directly from CINT

--- a/detectors/CMakeLists.txt
+++ b/detectors/CMakeLists.txt
@@ -17,7 +17,11 @@ file(GLOB dict_sources src/*.cpp)
 
 # message(STATUS "Headers for dictionary : " ${dict_headers})
 # message(STATUS "Sources for dictionary : " ${dict_sources})
-ROOT_GENERATE_DICTIONARY(DetectorsDict ${dict_headers} LINKDEF include/LinkDef.h)
+#if(${ROOT_VERSION} LESS 6.0)
+  ROOT_GENERATE_DICTIONARY(DetectorsDict ${dict_headers} LINKDEF include/LinkDef.h)
+#else()
+#  ROOT_GENERATE_DICTIONARY(DetectorsDict MODULE DetectorsDict ${dict_headers} LINKDEF include/LinkDef.h)
+#endif()
 list(APPEND sources DetectorsDict.cxx)
 add_library(Detectors SHARED ${dict_sources} DetectorsDict.cxx)
 target_link_libraries(Detectors ${ROOT_LIBRARIES} ${ROOT_COMPONENT_LIBRARIES})
