--- a/sw/CMakeLists.txt
+++ b/sw/CMakeLists.txt
@@ -12,11 +12,12 @@ file(GLOB headers include/*.hh)
 #
 
 file(GLOB dict_headers include/*.h)
+list(REMOVE_ITEM dict_headers include/LinkDef.h)
 file(GLOB dict_sources src/*.cpp)
 
 # message(STATUS "Headers for dictionary : " ${dict_headers})
 # message(STATUS "Sources for dictionary : " ${dict_sources})
-message(STATUS "ROOT version: " ${ROOT_VERSION})
+#message(STATUS "ROOT version: " ${ROOT_VERSION})
 #ROOT_GENERATE_DICTIONARY(PPSDict ${dict_headers} LINKDEF include/LinkDef.h)
 GENERATE_DICTIONARY(PPSDict ${dict_headers} LINKDEF include/LinkDef.h)
 list(APPEND sources PPSDict.cxx)
