--- a/sw/CMakeLists.txt
+++ b/sw/CMakeLists.txt
@@ -18,9 +18,9 @@ file(GLOB dict_sources src/*.cpp)
 # message(STATUS "Headers for dictionary : " ${dict_headers})
 # message(STATUS "Sources for dictionary : " ${dict_sources})
 # message(STATUS "ROOT version: " ${ROOT_VERSION})
-GENERATE_DICTIONARY(PPSDict ${dict_headers} LINKDEF include/LinkDef.h)
-list(APPEND sources PPSDict.cxx)
-add_library(PPS SHARED ${dict_sources} PPSDict.cxx)
+REFLEX_GENERATE_DICTIONARY(PPS ${dict_headers} SELECTION classes.xml)
+list(APPEND sources PPS.cxx)
+add_library(PPS SHARED ${dict_sources} PPS.cxx)
 target_link_libraries(PPS ${ROOT_LIBRARIES} ${ROOT_COMPONENT_LIBRARIES})
 
 list(APPEND headers ${dict_headers})
